syntax = "proto3";

package event;

option go_package = ".;pb";
import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

message Event {
  int64 id = 1;
  int64 owner = 2;
  string title = 3;
  string description = 4;
  string startdate = 5;
  google.protobuf.Timestamp starttime = 6;
  string enddate = 7;
  google.protobuf.Timestamp endtime = 8;
}

message Id {
  int64 id = 1;
}

service Calendar {
  rpc GetEvent (Id) returns (Event){
  }

  rpc SetEvent (Event) returns (Id){
  }

  rpc UpdateEvent(Event) returns (Id){
  }

  rpc DeleteEvent (Id) returns (google.protobuf.Empty){
  }
}

